Closed Bug 602767 Opened 15 years ago Closed 15 years ago

Fix "a the" in comments (in MailNews Core:Backend)

Categories

(MailNews Core :: Backend, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.3a1

People

(Reporter: ewong, Assigned: ewong)

References

Details

Attachments

(1 file, 1 obsolete file)

/suite/feeds/src/FeedWriter.js (View Hg log or Hg annotations) * line 266 -- * Calls doCommand for a the given XUL element within the context of the /suite/common/src/PlacesUIUtils.jsm (View Hg log or Hg annotations) * line 1362 -- * Transaction for editing a the description of a bookmark or a folder.
Additional occurrences: /mail/base/content/protovis-r2.6-modded.js (View Hg log or Hg annotations) * line 679 -- * @param {number} a the alpha channel, a float in [0,1]. * line 739 -- * @param {number} a the opacity, a float in [0, 1]. /mailnews/imap/src/nsImapProtocol.cpp (View Hg log or Hg annotations) * line 3942 -- // if the folder doesn't know about a the highest uid, or the flag state /mailnews/base/src/nsSpamSettings.cpp (View Hg log or Hg annotations) * line 476 -- // is not a the junk folder for another account
Component: General → Backend
Product: SeaMonkey → MailNews Core
QA Contact: general → backend
Summary: Fix "a the" in comments (in Seamonkey:General) → Fix "a the" in comments (in MailNews Core:Backend)
Severity: normal → trivial
OS: Windows Vista → All
Hardware: x86 → All
(In reply to comment #1) > Additional occurrences: > > /mail/base/content/protovis-r2.6-modded.js (View Hg log or Hg annotations) > * line 679 -- * @param {number} a the alpha channel, a float in [0,1]. > * line 739 -- * @param {number} a the opacity, a float in [0, 1]. These two lines are valid as it describes the parameter 'a'.
Attachment #481772 - Flags: review?(bugspam.Callek)
Comment on attachment 481772 [details] [diff] [review] Fix ' a the ' in MailNews Core::Backend. >+++ b/mailnews/base/src/nsSpamSettings.cpp >- // is not a the junk folder for another account >+ // is not a junk folder for another account nit: use 'the'
Attachment #481772 - Flags: review?(bugspam.Callek) → review+
Fixing the nit and carrying over the r+ for the new patch.
Attachment #481772 - Attachment is obsolete: true
Attachment #482764 - Flags: review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Flags: in-testsuite-
Target Milestone: --- → Thunderbird 3.3a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: