Bug 602767 - Fix ' a the ' in MailNews Core::BackEnd. r=Callek a=Callek for CLOSED TREE because I want to see new builds on TBPL.